--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
     "scripts": {
         "server": "nodemon server.js --ignore client"
     },
+    "engines": {
+        "node": "18.16.1"
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
