--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.5.3",
     "i": "^0.3.7",
     "if-env": "^1.0.4"
   },
