--- a/package.json
+++ b/package.json
@@ -16,14 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "html-webpack-plugin": "^5.5.3",
     "i": "^0.3.7",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "nodemon": "^2.0.4"
   }
 }
